# taiwan-quant-project

./: .gitignore  CLAUDE.md  USAGE.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: concepts.yaml  settings.yaml.example
data/: baseline_metrics.json
docs/: cli_commands.md  dashboard_schema.md  project_history.md  testing_guide.md
docs/design/: live_t1_pending_order.md
src/: config.py  constants.py  entry_exit.py
src/backtest/: allocator.py  attribution.py  engine.py  metrics.py  portfolio.py  walk_forward.py
src/cli/: __init__.py  anomaly_cmd.py  audit_cmd.py  backtest_cmd.py  baseline_cmd.py  detection.py  sync.py  (+11 more)
tests/: conftest.py  scanner_helpers.py  test_ablation.py  test_alert.py  test_allocator.py  test_anomaly.py  test_attribution.py  test_audit_overheating_and_mode_quota.py  test_audit_wave2_p1.py  test_audit_wave3_p2.py  test_backtest_engine.py  test_baseline_regression.py  test_broker.py  test_calendar.py  test_charts.py  test_concepts.py  test_config.py  test_cross_mode_corr.py  test_daily_snapshot.py  test_daily_snapshot_alpha.py  test_db_integration.py  test_discover_parallel.py  test_discover_performance.py  test_dividend_adjustment.py  test_entry_exit.py  test_execution_core.py  test_experiment_registry.py  test_export_dashboard.py  test_factor_diagnostics_warning.py  test_factor_ic_per_date.py  test_factors.py  test_factors_registry.py  test_fetcher.py  test_financial.py  test_formatter.py  test_holding.py  test_holdout_discipline.py  test_ic_aware_transform.py  test_ic_precomputed.py  test_indicators.py  (+44 more)
(+89 files in other folders)
